Implement V2 dual elasticity (base vs promo)

--- a/notebooks/01_data_transformation_exploration.ipynb
+++ b/notebooks/01_data_transformation_exploration.ipynb
@@ -76,6 +76,14 @@
         "    include_seasonality=True,\n",
         "    include_promotions=True,\n",
         "    include_time_trend=True,\n",
+        "\n",
+        "    # V2: enable base vs promo separation (default-on in the library)\n",
+        "    separate_base_promo=True,\n",
+        "\n",
+        "    # Base price estimation guardrails (used if base sales cols are missing/undefined)\n",
+        "    base_price_proxy_window=8,\n",
+        "    base_price_imputed_warn_threshold=0.30,\n",
+        "\n",
         "    retailers={\n",
         "        \"BJs\": {\"has_promo\": True, \"has_competitor\": True},\n",
         "        \"Sams\": {\"has_promo\": True, \"has_competitor\": True},\n",
@@ -210,6 +218,33 @@
         "out_path = RESULTS_DIR / \"prepared_data_from_notebook.csv\"\n",
         "df.to_csv(out_path, index=False)\n",
         "print(\"Wrote:\", out_path)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# ---- V2 feature checks: base price + promo depth ----\n",
+        "v2_cols = [\"Base_Price_SI\", \"Log_Base_Price_SI\", \"Promo_Depth_SI\"]\n",
+        "v2_cols = [c for c in v2_cols if c in df.columns]\n",
+        "\n",
+        "if v2_cols:\n",
+        "    display(df[v2_cols].describe().T)\n",
+        "\n",
+        "    # Promo depth interpretation: values are relative price change vs base.\n",
+        "    #  - 0.00 means no discount (avg price == base price)\n",
+        "    #  - negative means discounted (e.g., -0.10 ≈ 10% off)\n",
+        "    plt.figure(figsize=(8, 4))\n",
+        "    plt.hist(df[\"Promo_Depth_SI\"], bins=50, alpha=0.75, edgecolor=\"black\")\n",
+        "    plt.title(\"Promo_Depth_SI distribution (negative = discount)\")\n",
+        "    plt.xlabel(\"Promo_Depth_SI\")\n",
+        "    plt.ylabel(\"Count\")\n",
+        "    plt.grid(alpha=0.25)\n",
+        "    plt.show()\n",
+        "else:\n",
+        "    print(\"V2 columns not found. Check that PrepConfig(separate_base_promo=True) and input columns exist.\")\n"
       ]
     }
   ],
