Fix example imports when running scripts directly

--- a/notebooks/01_data_transformation_exploration.ipynb
+++ b/notebooks/01_data_transformation_exploration.ipynb
@@ -37,11 +37,21 @@
       "outputs": [],
       "source": [
         "import os\n",
+        "import sys\n",
         "from pathlib import Path\n",
         "\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
+        "\n",
+        "# Ensure repo root is on PYTHONPATH so imports work regardless of notebook CWD\n",
+        "REPO_ROOT = Path.cwd()\n",
+        "if (REPO_ROOT / \"data_prep.py\").exists() is False:\n",
+        "    # If we're running from notebooks/, go one level up\n",
+        "    REPO_ROOT = Path(__file__).resolve().parents[1] if \"__file__\" in globals() else Path.cwd().parents[0]\n",
+        "\n",
+        "if str(REPO_ROOT) not in sys.path:\n",
+        "    sys.path.insert(0, str(REPO_ROOT))\n",
         "\n",
         "from data_prep import ElasticityDataPrep, PrepConfig\n",
         "\n",
@@ -49,10 +59,11 @@
         "pd.set_option(\"display.width\", 180)\n",
         "\n",
         "# Where outputs from this notebook will go\n",
-        "RESULTS_DIR = Path(\"results\")\n",
+        "RESULTS_DIR = REPO_ROOT / \"results\"\n",
         "RESULTS_DIR.mkdir(parents=True, exist_ok=True)\n",
         "\n",
         "print(\"Notebook environment ready\")\n",
+        "print(\"repo root:\", REPO_ROOT.resolve())\n",
         "print(\"results/ directory:\", RESULTS_DIR.resolve())\n"
       ]
     },
