Use Volume Sales DV: config wiring + docs

--- a/notebooks/01_data_transformation_exploration.ipynb
+++ b/notebooks/01_data_transformation_exploration.ipynb
@@ -155,9 +155,9 @@
       "source": [
         "# ---- Numeric sanity checks ----\n",
         "key_cols = [\n",
-        "    \"Unit_Sales_SI\",\"Unit_Sales_PL\",\n",
+        "    \"Volume_Sales_SI\",\"Volume_Sales_PL\",\n",
         "    \"Price_SI\",\"Price_PL\",\n",
-        "    \"Log_Unit_Sales_SI\",\"Log_Price_SI\",\"Log_Price_PL\",\n",
+        "    \"Log_Volume_Sales_SI\",\"Log_Price_SI\",\"Log_Price_PL\",\n",
         "    \"Promo_Intensity_SI\",\n",
         "    \"Week_Number\",\n",
         "    \"has_promo\",\"has_competitor\",\n",
@@ -169,8 +169,8 @@
         "# Quick checks for suspicious values\n",
         "if \"Price_SI\" in df.columns:\n",
         "    print(\"Min Price_SI:\", df[\"Price_SI\"].min())\n",
-        "if \"Unit_Sales_SI\" in df.columns:\n",
-        "    print(\"Min Unit_Sales_SI:\", df[\"Unit_Sales_SI\"].min())\n",
+        "if \"Volume_Sales_SI\" in df.columns:\n",
+        "    print(\"Min Volume_Sales_SI:\", df[\"Volume_Sales_SI\"].min())\n",
         "\n",
         "# Missingness report\n",
         "missing_rate = df[key_cols].isna().mean().sort_values(ascending=False)\n",
@@ -203,18 +203,18 @@
         "df_plot = df.sort_values(\"Date\")\n",
         "\n",
         "plt.figure(figsize=(14, 4))\n",
-        "plt.plot(df_plot[\"Date\"], df_plot[\"Unit_Sales_SI\"], linewidth=1)\n",
-        "plt.title(\"Sparkling Ice Unit Sales over time\")\n",
+        "plt.plot(df_plot[\"Date\"], df_plot[\"Volume_Sales_SI\"], linewidth=1)\n",
+        "plt.title(\"Sparkling Ice Volume Sales over time\")\n",
         "plt.xlabel(\"Date\")\n",
-        "plt.ylabel(\"Unit_Sales_SI\")\n",
+        "plt.ylabel(\"Volume_Sales_SI\")\n",
         "plt.grid(alpha=0.3)\n",
         "plt.show()\n",
         "\n",
         "plt.figure(figsize=(6, 5))\n",
-        "plt.scatter(df_plot[\"Log_Price_SI\"], df_plot[\"Log_Unit_Sales_SI\"], s=12, alpha=0.4)\n",
+        "plt.scatter(df_plot[\"Log_Price_SI\"], df_plot[\"Log_Volume_Sales_SI\"], s=12, alpha=0.4)\n",
         "plt.title(\"Log Sales vs Log Own Price\")\n",
         "plt.xlabel(\"Log_Price_SI\")\n",
-        "plt.ylabel(\"Log_Unit_Sales_SI\")\n",
+        "plt.ylabel(\"Log_Volume_Sales_SI\")\n",
         "plt.grid(alpha=0.3)\n",
         "plt.show()\n"
       ]
