Docs + notebook: Costco contracts/runbook; fix convergence stats

--- a/notebooks/01_data_transformation_exploration.ipynb
+++ b/notebooks/01_data_transformation_exploration.ipynb
@@ -4,17 +4,19 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Data Transformation Exploration (Circana → model-ready)\n",
+        "# Data Transformation Exploration (raw CSV → model-ready)\n",
         "\n",
         "This notebook helps you validate the **data transformation pipeline** step-by-step before fitting Bayesian models.\n",
         "\n",
         "## What you’ll get confidence in\n",
         "\n",
-        "- Input files load correctly (Circana CSV format)\n",
+        "- Input files load correctly\n",
+        "- Retailer-specific parsing rules are applied correctly (Circana vs Costco CRX)\n",
         "- Expected columns exist after transformation\n",
-        "- Prices / sales / logs look sensible (no weird zeros or outliers)\n",
+        "- Prices / sales / logs look sensible (no weird zeros, negative values, or extreme outliers)\n",
         "- Retailer separation behaves as expected (`retailer_filter`)\n",
-        "- “Missing feature” handling works (e.g., Costco missing promo)\n",
+        "- “Missing feature” masking works (e.g., Costco missing competitor / private label)\n",
+        "- You can export an auditable `prepared_data_from_notebook.csv`\n",
         "\n",
         "## Prereqs\n",
         "\n",
@@ -27,7 +29,11 @@
         "\n",
         "```bash\n",
         "pip install -r requirements.txt\n",
-        "```\n"
+        "```\n",
+        "\n",
+        "## Costco note\n",
+        "\n",
+        "Costco CRX typically has a different schema than Circana. The pipeline handles this via **runtime YAML retailer contracts** (`data.retailer_data_contracts` in `config_template.yaml`). This notebook will attempt to load those contracts so Costco is parsed correctly.\n"
       ]
     },
     {
@@ -76,11 +82,44 @@
         "# ---- Configure paths (edit if your filenames differ) ----\n",
         "BJS_PATH = \"data/bjs.csv\"\n",
         "SAMS_PATH = \"data/sams.csv\"\n",
-        "COSTCO_PATH = None  # e.g., \"data/costco.csv\"\n",
+        "\n",
+        "# Auto-include Costco if the file exists (you can also hardcode a path string here)\n",
+        "_default_costco = \"data/costco.csv\"\n",
+        "COSTCO_PATH = _default_costco if (REPO_ROOT / _default_costco).exists() else None\n",
+        "\n",
+        "print(\"BJS_PATH:\", BJS_PATH)\n",
+        "print(\"SAMS_PATH:\", SAMS_PATH)\n",
+        "print(\"COSTCO_PATH:\", COSTCO_PATH)\n",
+        "\n",
+        "# ---- Load runtime retailer contracts from config_template.yaml (recommended) ----\n",
+        "# These contracts are what allow Costco CRX (different schema) to be parsed correctly.\n",
+        "retailer_data_contracts = None\n",
+        "try:\n",
+        "    import yaml\n",
+        "\n",
+        "    cfg_path = REPO_ROOT / \"config_template.yaml\"\n",
+        "    if cfg_path.exists():\n",
+        "        with open(cfg_path, \"r\") as f:\n",
+        "            cfg_yaml = yaml.safe_load(f) or {}\n",
+        "        retailer_data_contracts = (cfg_yaml.get(\"data\") or {}).get(\"retailer_data_contracts\")\n",
+        "        print(\"Loaded retailer_data_contracts from:\", cfg_path)\n",
+        "    else:\n",
+        "        print(\"WARNING: config_template.yaml not found; proceeding without retailer_data_contracts\")\n",
+        "except Exception as e:\n",
+        "    print(\"WARNING: could not load retailer_data_contracts (continuing without it). Error:\", e)\n",
         "\n",
         "# ---- Configure data preparation ----\n",
         "# Use retailer_filter=\"All\" to keep retailers separate (needed for hierarchical model).\n",
         "# Use retailer_filter=\"Overall\" to combine into one pooled dataset.\n",
+        "\n",
+        "retailers_cfg = {\n",
+        "    \"BJs\": {\"has_promo\": True, \"has_competitor\": True},\n",
+        "    \"Sams\": {\"has_promo\": True, \"has_competitor\": True},\n",
+        "}\n",
+        "\n",
+        "# Costco CRX typically has promo depth inputs but does not include Private Label rows for cross-price.\n",
+        "if COSTCO_PATH is not None:\n",
+        "    retailers_cfg[\"Costco\"] = {\"has_promo\": True, \"has_competitor\": False}\n",
         "\n",
         "cfg = PrepConfig(\n",
         "    retailer_filter=\"All\",\n",
@@ -95,11 +134,14 @@
         "    base_price_proxy_window=8,\n",
         "    base_price_imputed_warn_threshold=0.30,\n",
         "\n",
-        "    retailers={\n",
-        "        \"BJs\": {\"has_promo\": True, \"has_competitor\": True},\n",
-        "        \"Sams\": {\"has_promo\": True, \"has_competitor\": True},\n",
-        "        # \"Costco\": {\"has_promo\": False, \"has_competitor\": True},\n",
-        "    },\n",
+        "    # Dependent variable rule: always model Volume Sales.\n",
+        "    # If a retailer file is missing `Volume Sales`, data prep computes:\n",
+        "    #   Volume Sales = Unit Sales × factor\n",
+        "    # Costco CRX commonly needs this.\n",
+        "    volume_sales_factor_by_retailer={\"Costco\": 2.0},\n",
+        "\n",
+        "    retailers=retailers_cfg,\n",
+        "    retailer_data_contracts=retailer_data_contracts,\n",
         "    verbose=True,\n",
         ")\n",
         "\n",
